[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu-grab-focus.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/Options.gd" type="Script" id=3]
[ext_resource path="res://gfx/gui/pause.png" type="Texture" id=4]
[ext_resource path="res://gfx/gui/hud/gradient-2.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]

[node name="Pause" type="Sprite" parent="."]
position = Vector2( 216, 122 )
texture = ExtResource( 4 )

[node name="Gradient-2" type="Sprite" parent="."]
visible = false
position = Vector2( 220, 122 )
texture = ExtResource( 5 )

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 64.0
margin_right = 429.0
margin_bottom = 193.0
grow_horizontal = 2
theme = ExtResource( 1 )
custom_constants/separation = 1
script = ExtResource( 3 )

[node name="Mute" type="Button" parent="Options"]
margin_right = 423.0
margin_bottom = 25.0
text = "Mute audio (   )"
script = ExtResource( 2 )

[node name="Fps" type="Button" parent="Options"]
margin_top = 26.0
margin_right = 423.0
margin_bottom = 51.0
text = "Display FPS (   )"

[node name="fullscreen" type="Button" parent="Options"]
margin_top = 52.0
margin_right = 423.0
margin_bottom = 77.0
text = "Toggle fullscreen"

[node name="Exit" type="Button" parent="Options"]
margin_top = 78.0
margin_right = 423.0
margin_bottom = 103.0
text = "Exit"

[connection signal="pressed" from="Options/Mute" to="Options" method="_on_Mute_pressed"]
[connection signal="pressed" from="Options/Fps" to="Options" method="_on_Fps_pressed"]
[connection signal="pressed" from="Options/fullscreen" to="Options" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Options/Exit" to="Options" method="_on_Exit_pressed"]
